[gd_scene load_steps=6 format=3 uid="uid://cnr8dmc8ywust"]

[ext_resource type="Script" uid="uid://cnxbvku2fipof" path="res://scripts/Enemy Scripts/cctv.gd" id="1_1gps1"]
[ext_resource type="Texture2D" uid="uid://ci2bn433uv5co" path="res://assets/Objects/camera.png" id="2_kubkh"]
[ext_resource type="Texture2D" uid="uid://4lao71qtcp1s" path="res://assets/Enemy/enemy_triangle[1].png" id="3_kubkh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u380w"]
size = Vector2(36, 57.75)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_1gps1"]
polygon = PackedVector2Array(13, -31, 18, -28, 15, -26, 9, -25, 9, -17, 15, -14, 12, 7, 11, 27, -4, 33, -17, 29, -17, 7, -16, -4, -13, -17, -2, -19, -2, -25, -7, -26, -11, -29, -10, -31, -2, -32, 8, -32)

[node name="CCTV" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_1gps1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-5.82077e-11, 0)
scale = Vector2(0.02, 0.02)
texture = ExtResource("2_kubkh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_u380w")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
position = Vector2(-14, 0)
scale = Vector2(1.04608, 1)
color = Color(0.980392, 1, 0.917647, 0.462745)
polygon = PackedVector2Array(13.3833, 0, 311, 553, -258.745, 553)

[node name="RayCast" type="RayCast2D" parent="."]
collision_mask = 7

[node name="Visiblity" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Visiblity"]
position = Vector2(0, 105)
scale = Vector2(1.70685, 1.70685)
polygon = PackedVector2Array(0, -61.5168, 156.429, 216.188, 117.175, 236.107, 50.3852, 257.785, -21.0915, 262.472, -90.2247, 246.653, -150.57, 222.046)

[node name="Vision" type="PointLight2D" parent="."]
position = Vector2(0, 275)
scale = Vector2(1.45953, 1.41154)
energy = 0.5
shadow_enabled = true
shadow_filter = 1
texture = ExtResource("3_kubkh")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_1gps1")

[connection signal="body_entered" from="Visiblity" to="." method="_on_visiblity_body_entered"]
[connection signal="body_exited" from="Visiblity" to="." method="_on_visiblity_body_exited"]
